added code for step 12

--- a/Lab02_git_github1.ipynb
+++ b/Lab02_git_github1.ipynb
@@ -328,17 +328,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Branch(name=\"main\"), Branch(name=\"nick-branch\")]\n",
+      "Total number of pull requests: 1\n",
+      "Total number of pull requests by Kulaway: 1\n",
+      "https://api.github.com/repos/Kulaway/lab2-ensf400/pulls/1\n",
+      "Total number of commits:  4\n",
+      "Number of commits by Kulaway: 4\n",
+      "https://api.github.com/repos/Kulaway/lab2-ensf400/git/commits/4b7edaa80003a8d160c86e8d762d6f674446b289\n",
+      "https://api.github.com/repos/Kulaway/lab2-ensf400/git/commits/3b15f1d54f8735a30363048ddcacc45b17ad4c0d\n",
+      "https://api.github.com/repos/Kulaway/lab2-ensf400/git/commits/4f32009e7708250519d0883fa1dc2c3d85e860c1\n",
+      "https://api.github.com/repos/Kulaway/lab2-ensf400/git/commits/2e3b2683a269ec276844b63f3aee74d30c4f7050\n"
+     ]
+    }
+   ],
    "source": [
     "from github import Github\n",
     "\n",
-    "# or using an access token\n",
-    "g = Github(\"your_access_token\")\n",
-    "repo = g.get_repo(\"username/repo\")\n",
+    "user_name = 'Kulaway'\n",
     "\n",
-    "## Complete your tasks from here"
+    "# or using an access token\n",
+    "g = Github(\"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\")\n",
+    "repo = g.get_repo(f\"{user_name}/lab2-ensf400\")\n",
+    "\n",
+    "## Complete your tasks from here\n",
+    "\n",
+    "## Get all branches\n",
+    "print(list(repo.get_branches()))\n",
+    "\n",
+    "## Get all pull requests\n",
+    "pullRequests = list(repo.get_pulls(state=\"open\")) + list(repo.get_pulls(state='closed'))\n",
+    "\n",
+    "print('Total number of pull requests:', len(pullRequests))\n",
+    "print(f'Total number of pull requests by {user_name}:',\n",
+    "      sum(1 for pr in pullRequests if user_name == pr.head.user.login))\n",
+    "for pr in pullRequests:\n",
+    "    if user_name == pr.head.user.login:\n",
+    "        print(pr.url)\n",
+    "\n",
+    "## Get commits in main branch\n",
+    "commits = list(repo.get_commits())\n",
+    "print('Total number of commits: ',commits.__len__())\n",
+    "print(f'Number of commits by {user_name}: '\n",
+    "      f'{sum(1 for c in commits if user_name == c.author.login)}')\n",
+    "for commit in commits:\n",
+    "    if user_name == commit.author.login:\n",
+    "        print(commit.commit.url)"
    ]
   },
   {
@@ -379,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
